# draw64

./: pyproject.toml  talk.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
draw64/: app.py
slidev/: package-lock.json  talk.md
